forge/tests/errors/type_mismatch.fg
// Error test: type mismatch with conversion suggestion
fn main() {
  let port: string = 8080
  println(port)
}
